--- a/src/components/FloatingMenu/FloatingMenu.module.scss
+++ b/src/components/FloatingMenu/FloatingMenu.module.scss
@@ -6,7 +6,7 @@
   left: 0;
   margin-left: var(--spacing-lg);
   backdrop-filter: blur(4px);
-  background-color: #f5f5f5b1;
+  background-color: var(--transp-foreground);
   color: var(--foreground);
   height: var(--spacing-xl);
   border: 1px groove var(--muted-color);
